--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
+    "@langchain/google-genai": "^0.2.14",
     "@types/istextorbinary": "^2.3.1",
     "chalk": "^5.2.0",
     "cli-progress": "^3.12.0",
