--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "outDir": "dist",
     "strict": true,
     "target": "es2020",
-    "module": "ES2020",
+    "module": "NodeNext",
     "sourceMap": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
+    "types": ["node"],
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
